# glint

./: .gitignore  LICENSE  MANIFEST.in  README.md  build_exe.py  convert_icon.py  glint-gui.bat  glint.spec  migrate_db.py  pyproject.toml  rejected_trends.csv  test_notification.py  test_notify.py  test_trackpad.py
.github/workflows/: publish.yml
docs/: API_KEYS_SETUP.md  CURRENT_FEATURES.md
scripts/: test_cascade_delete.py  test_fetch.py
src/glint.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/glint/assets/: core engine glint.excalidraw
src/glint/cli/: __init__.py  main.py
src/glint/cli/commands/: analyze.py  cache.py  clear.py  config.py  daemon.py  fetch.py  init.py  show.py  status.py  theme.py  topics.py
src/glint/cli/interface/: app.py  config_mode.py
src/glint/core/: config.py  database.py  fetchers.py  logger.py  models.py  notifier.py  parallel_fetcher.py
src/glint/gui/: app.py
src/glint/gui/components/: dashboard.py  terminal.py  trend_card.py
src/glint/gui/utils/: scrolling.py
src/glint/sources/: __init__.py  arxiv.py  base.py  devto.py  github.py  hackernews.py  openalex.py  producthunt.py  reddit.py  semanticscholar.py
src/glint/utils/: __init__.py  cache.py  commands.md  fingerprint.py  http_client.py  ml_exporter.py  relevance.py  url_utils.py  view_trends.py
src/glint/web/: server.py
src/glint/web/templates/: dashboard.html  prompt.html
src/tests/other_test/: test_fingerprint.py  test_relevance.py  test_url_normalization.py
